--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
 .all-header {
   height: 450px;
   background-color: #0C325A;
+  background-image: url(../img/oldman.png);
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: 106% 100%;
 }
 
 /* nav-header */
@@ -44,12 +48,15 @@ body {
 }
 .nav-header ul li a {
   margin-right: 10px;
-  font-size: 10px;
+  font-size: 11px;
   font-weight: 700;
   text-transform: uppercase;
   text-align: center;
   text-decoration: none;
   color: #fff;
+}
+.nav-header ul li a:hover{
+  color: #F8B71C;
 }
 /* fine nav left */
 
@@ -68,3 +75,30 @@ body {
   border-radius: 5px;
 }
 /* fine nav-right */
+
+/* header-center */
+.header-center {
+  position: relative;
+  width: 85%;
+  height: 370px;
+  margin: 0 auto;
+}
+.header-center .header-claim {
+  position: absolute;
+  width: 45%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.header-claim h1 {
+  font-size: 40px;
+  color: #fff;
+  margin-bottom: 30px;
+}
+.header-claim .struttura {
+  padding:7px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  text-transform: uppercase;
+  background-color: #7FB800;
+  color: #fff;
+}
